--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+        <div id="card">
+            <h1>Happy Valentines Day</h1>
+            <div class="heart" id="heart1">
+                <div id="half1">
+                    <div id="circler"></div>
+                    <div id="rec"></div>
+                </div>
+                <div id="half2">
+                    <div id="circler"></div>
+                    <div id="rec"></div>  
+                </div>
+            </div>
+            <div id="message">
+                <h2>Are you a magnet? Because you sure are attracting my heart!</h2>
+            </div>
+            <div class="heart" id="heart2">
+                <div id="half1">
+                    <div id="circler"></div>
+                    <div id="rec"></div>
+                </div>
+                <div id="half2">
+                    <div id="circler"></div>
+                    <div id="rec"></div>  
+                </div>
+            </div>
+        </div>
     </body>    
 </html>
