updated html and css

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <h1>Happy Valentines Day</h1>
             <div class="heart" id="heart1">
                 <div id="half1">
-                    <div id="circler"></div>
+                    <div id="circle"></div>
                     <div id="rec"></div>
                 </div>
                 <div id="half2">
-                    <div id="circler"></div>
+                    <div id="circle"></div>
                     <div id="rec"></div>  
                 </div>
             </div>
@@ -26,12 +26,12 @@
             </div>
             <div class="heart" id="heart2">
                 <div id="half1">
-                    <div id="circler"></div>
-                    <div id="rec"></div>
+                    <div id="circle"></div>
+                    <div id="rec2"></div>
                 </div>
                 <div id="half2">
-                    <div id="circler"></div>
-                    <div id="rec"></div>  
+                    <div id="circle"></div>
+                    <div id="rec2"></div>  
                 </div>
             </div>
         </div>
