updated css and html

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <div class="heart" id="heart2">
                 <div id="half1">
                     <div id="circle"></div>
-                    <div id="rec2"></div>
+                    <div id="rec"></div>
                 </div>
                 <div id="half2">
                     <div id="circle"></div>
-                    <div id="rec2"></div>  
+                    <div id="rec"></div>  
                 </div>
             </div>
         </div>
