updated html and css file

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <div class="heart" id="heart1">
                 <div id="half1">
                     <div id="circle"></div>
-                    <div id="rec"></div>
+                    <div id="rec2"></div>
                 </div>
                 <div id="half2">
                     <div id="circle"></div>
-                    <div id="rec"></div>  
+                    <div id="rec2"></div>  
                 </div>
             </div>
             <div id="message">
